SalesForce/VF2/src/objects/PurchaseLineItem__c.object
<CustomObject>
    <fields>
        <fullName>Custom_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>PurchaseLineItems</relationshipLabel>
        <relationshipName>PurchaseLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_Per_Unit__c</fullName>
        <label>Price Per Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PurchaseOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PurchaseOrder</label>
        <referenceTo>PurchaseOrder__c</referenceTo>
        <relationshipLabel>PurchaseLineItems</relationshipLabel>
        <relationshipName>PurchaseLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>Quantity__c  *  Price_Per_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>PurchaseLineItem</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>O-{0000}</displayFormat>
        <label>PurchaseLineItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PurchaseLineItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>